--- a/kubernetes/manifests/backstage/deployment.yaml
+++ b/kubernetes/manifests/backstage/deployment.yaml
@@ -20,7 +20,7 @@ spec:
         effect: "NoSchedule"
       containers:
       - name: backstage
-        image: backstage/backstage:latest
+        image: gchr.io/backstage/backstage:latest
         ports:
         - containerPort: 7007
         env:
