update base image to get the custom image working

--- a/backstage/Dockerfile
+++ b/backstage/Dockerfile
@@ -1,24 +1,24 @@
-FROM backstage/backstage:latest
+FROM ghcr.io/backstage/backstage:latest
 
 WORKDIR /app
 
-# Temporarily switch to root for operations requiring elevated permissions
+# Switch to root for privileged operations
 USER root
 
-# Create base config with the critical backend.baseUrl setting
+# Create essential config with backend.baseUrl 
 RUN echo 'backend:\n  baseUrl: http://localhost:7007' > /app/app-config.base.yaml
 
-# Install the Kubernetes plugins
+# Install the Kubernetes plugins with exact versions that are compatible
 RUN cd packages/backend && yarn add \
-    @backstage/plugin-kubernetes \
-    @backstage/plugin-kubernetes-backend
+    @backstage/plugin-kubernetes@0.12.5 \
+    @backstage/plugin-kubernetes-backend@0.19.4
 
 # Copy Kubernetes configuration
 COPY app-config.kubernetes.yaml /app/
 
-# Merge configurations - this ensures the baseUrl setting is included in the final config
-RUN cat /app/app-config.base.yaml > /app/app-config.yaml && \
-    cat /app/app-config.kubernetes.yaml >> /app/app-config.yaml
+# Merge configurations into app-config.yaml
+RUN cat /app/app-config.base.yaml > /app/app-config.default.yaml && \
+    cat /app/app-config.kubernetes.yaml >> /app/app-config.default.yaml
 
 # Create plugin directories with proper permissions
 RUN mkdir -p /app/packages/backend/dist/plugins && \
@@ -42,7 +42,17 @@ RUN echo "const { createRouter } = require('@backstage/plugin-kubernetes-backend
 RUN sed -i 's/const app = express()/const app = express();\\nconst kubernetes = require(".\/plugins\/kubernetes");/' /app/packages/backend/dist/index.cjs.js && \
     sed -i 's/apiRouter.use("\/proxy"/apiRouter.use("\/kubernetes", await kubernetes(middlewareEnv));\\n  apiRouter.use("\/proxy"/' /app/packages/backend/dist/index.cjs.js
 
+# Create a startup script to ensure we always have baseUrl
+USER root
+RUN echo '#!/bin/bash\n\
+if grep -q "backend:" /app/app-config.yaml && ! grep -q "baseUrl:" /app/app-config.yaml; then\n\
+  echo "Adding backend.baseUrl to app-config.yaml"\n\
+  echo "backend:\\n  baseUrl: http://localhost:7007" >> /app/app-config.yaml\n\
+fi\n\
+exec node packages/backend --config app-config.yaml --config app-config.default.yaml\n' > /app/start.sh && \
+chmod +x /app/start.sh
+
 EXPOSE 7007
 
-# Also modify the CMD to load BOTH config files (fallback in case the mounted config doesn't have baseUrl)
-CMD ["node", "packages/backend", "--config", "app-config.yaml", "--config", "app-config.base.yaml"]
+# Use our startup script instead of calling node directly
+CMD ["/app/start.sh"]
