--- a/kubernetes/manifests/backstage/deployment.yaml
+++ b/kubernetes/manifests/backstage/deployment.yaml
@@ -20,8 +20,8 @@ spec:
         effect: "NoSchedule"
       containers:
       - name: backstage
-        image: ghcr.io/backstage/backstage:latest
-        #image: europe-west4-docker.pkg.dev/meetup-ai/meetup-ai/backstage-custom:1.0.6
+        #image: ghcr.io/backstage/backstage:latest
+        image: europe-west4-docker.pkg.dev/meetup-ai/meetup-ai/backstage-custom:1.0.7
         ports:
         - containerPort: 7007
         env:
