--- a/kubernetes/manifests/backstage/backstage-app-config.yaml
+++ b/kubernetes/manifests/backstage/backstage-app-config.yaml
@@ -94,9 +94,9 @@ data:
       baseUrl: http://backstage.backstage.svc.cluster.local:7007
       frontend:
         debugEnabled: true
-        packages:
-        - name: app
-          version: 0.0.0
+      packages:
+        - name: example-app
+          version: 0.2.107
           path: /app/packages/app
 
     auth:
