--- a/kubernetes/manifests/backstage/kustomization.yaml
+++ b/kubernetes/manifests/backstage/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - backstage-app-config.yaml
+- backstage-backend-config.yaml
 - backstage-entities.yaml
 - deployment.yaml
 - ingress.yaml
