--- a/kubernetes/manifests/backstage/deployment.yaml
+++ b/kubernetes/manifests/backstage/deployment.yaml
@@ -21,7 +21,7 @@ spec:
       containers:
       - name: backstage
         #image: ghcr.io/backstage/backstage:latest
-        image: europe-west4-docker.pkg.dev/meetup-ai/meetup-ai/backstage-custom:1.1.15
+        image: europe-west4-docker.pkg.dev/meetup-ai/meetup-ai/backstage-custom:1.1.17
         ports:
         - containerPort: 7007
         env:
@@ -124,17 +124,17 @@ spec:
         - name: entities
           mountPath: /app/examples/entities.yaml
           subPath: entities.yaml
-        - name: backstage-app-config
-          mountPath: /app/app-config.yaml
-          subPath: app-config.yaml
-        - mountPath: /app/packages/app/dist
-          name: app-dist
+ #       - name: backstage-app-config
+ #         mountPath: /app/app-config.yaml
+ #         subPath: app-config.yaml
+ #       - mountPath: /app/packages/app/dist
+ #         name: app-dist
       volumes:
       - name: entities
         configMap:
           name: backstage-entities
-      - name: backstage-app-config
-        configMap:
-          name: backstage-app-config
-      - name: app-dist
-        emptyDir: {}
+#      - name: backstage-app-config
+#        configMap:
+#          name: backstage-app-config
+#      - name: app-dist
+#        emptyDir: {}
