--- a/backstage/templates/ml-model-template.yaml
+++ b/backstage/templates/ml-model-template.yaml
@@ -2,7 +2,7 @@ apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
   name: llm-deployment-template
-  title: LLM Deployments
+  title: LLM Deployments v2
   description: Deploy a Large Language Model (LLM)
   tags:
     - llm
